force-app/main/default/objects/Vote__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <description>Id du poste.</description>
    <label>Post</label>
    <referenceTo>Post__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>