force-app/main/default/objects/Vote__c/fields/Upvotes__c.field-meta.xml
<CustomField>
    <fullName>Upvotes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Upvotes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>